--- a/index.html
+++ b/index.html
@@ -663,13 +663,13 @@ var DevCenter = (function () {
 <div class="container relative z-2">
   <div id="medium-widget"></div>
       </div></div></div>
-    <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
+    <!-- <script src="https://medium-widget.pixelpoint.io/widget.js"></script> -->
 
-    <script>
+    <!-- <script>
     window.addEventListener('DOMContentLoaded', function() {
         (MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/bigcommerce-developer-blog","postsPerLine":4,"limit":4,"picture":"big","fields":["description","author","claps","likes","publishAt"],"ratio":"landscape"}}));
     });
-</script>
+</script> -->
           <div class="area-bg community-cta cBrHomeLayout siteforceContentArea">
             <div class="row row--pad p-bottom-100 p-bottom-60--media-md">
               <h2 class="h2 m-top-0 m-bottom-52r text-center" id="trending-now">Get Support from Our Developer Community</h2>
