update index scripts

--- a/api-docs/index.html
+++ b/api-docs/index.html
@@ -9287,10 +9287,10 @@ var DevCenter = (function () {
             background: '#4d34c6',
             texture: '',
           },
-          googleAnalytics: 'UA-93363200-2',
-          gtm: 'GTM-KL3MKSK',
+          // googleAnalytics: 'UA-93363200-2',
+          // gtm: 'GTM-KL3MKSK',
           intercom: null,
-          segment: 'BTmUWLubCbJjBopJwsDTxC0594E6Z5ex',
+          // segment: 'BTmUWLubCbJjBopJwsDTxC0594E6Z5ex',
           whitelabel: true,
         },
       };
