revert path changes

--- a/index.html
+++ b/index.html
@@ -5646,7 +5646,7 @@
     </div>
     <script type="text/javascript">
       window.__routeInfo = {
-        path: '/devdocs-next-build/',
+        path: '/',
         templateID: 0,
         sharedPropsHashes: { nav: 'Z2k7O5R', namespace: 'Zd6xn0' },
         localProps: null,
